namespaces/live.cloud-platform.service.justice.gov.uk/laa-crime-assessment-service-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-crime-assessment-service-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
    allow-maat-api-use: "uat"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crime-assess-apps"
    cloud-platform.justice.gov.uk/application: "crime-assessment-service"
    cloud-platform.justice.gov.uk/owner: "LAA Crime Assess Apps Modernisation Team: laa-crime-assess-apps-modernisation@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-crime-assessment-service"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-apps-team"
    cloud-platform.justice.gov.uk/review-after: ""
